--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -5,7 +5,7 @@
 
   roles:
     - geerlingguy.nfs
-    - geerlingguy.packer-debian
+    - it-praktyk.packer-debian
 
   tasks:
     - apt: "name={{ item }} state=installed"
@@ -14,3 +14,4 @@
         - wget
         - curl
         - vim
+
